// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkStar should render correctly when empty 1`] = `
<View
  accessible={false}
  style={
    Object {
      "height": 12,
      "width": 12,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkStar should render correctly when full 1`] = `
<View
  accessible={false}
  style={
    Object {
      "height": 12,
      "width": 12,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "zIndex": 2,
          },
          Object {
            "color": "rgb(255, 181, 77)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkStar should render correctly when half 1`] = `
<View
  accessible={false}
  style={
    Object {
      "height": 12,
      "width": 12,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "zIndex": 2,
          },
          Object {
            "color": "rgb(255, 181, 77)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkStar should support theming when empty 1`] = `
<View
  accessible={false}
  style={
    Object {
      "height": 12,
      "width": 12,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkStar should support theming when full 1`] = `
<View
  accessible={false}
  style={
    Object {
      "height": 12,
      "width": 12,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "zIndex": 2,
          },
          Object {
            "color": "rgb(255, 181, 77)",
          },
          Object {
            "color": "pink",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkStar should support theming when half 1`] = `
<View
  accessible={false}
  style={
    Object {
      "height": 12,
      "width": 12,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "rgb(221, 221, 229)",
            "fontSize": 12,
            "left": 0,
            "lineHeight": 12,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "zIndex": 2,
          },
          Object {
            "color": "rgb(255, 181, 77)",
          },
          Object {
            "color": "pink",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;
